[package]
name = "carrot-sdk-v3"
version = "0.1.0"
edition = "2021"
authors = ["Carrot SDK Contributors"]
description = "Rust SDK for interacting with the Carrot Protocol on Solana"
license = "MIT"
repository = "https://github.com/hogyzen12/carrot-sdk-v3"

[dependencies]
borsh = "1.5.7"
solana-sdk = "3.0.0"
solana-client = "3.0.0"
spl-token = "9.0.0"
spl-associated-token-account = "8.0.0"
spl-token-2022-interface = "2.1.0"
solana-commitment-config = "3.0.0"
solana-sdk-ids = "3.0.0"
anyhow = "1.0"
thiserror = "2.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }

[[example]]
name = "deposit"
path = "examples/deposit.rs"

[[example]]
name = "withdraw"
path = "examples/withdraw.rs"
